--- a/profil.html
+++ b/profil.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1" name="viewport" />
-        <title>IQIS Makassar | Tentang</title>
+        <title>IQIS Makassar | Profil</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <link
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -142,9 +142,9 @@
                 </a>
 
                 <!-- Tentang -->
-                <a href="tentang.html" aria-label="Tentang" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
+                <a href="profil.html" aria-label="Tentang" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
                     <i class="fas fa-info-circle text-[18px]"></i>
-                    <span class="mt-2">Tentang</span>
+                    <span class="mt-2">Profil</span>
                 </a>
                 </nav>
             </div>
