update: Carousel Testimoni

--- a/infromasi.html
+++ b/infromasi.html
@@ -208,21 +208,21 @@
                     <span class="mt-2">Beranda</span>
                 </a>
 
-                <!-- Artikel -->
-                <a href="artikel.html" aria-label="Artikel" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
-                    <i class="fas fa-book-open text-[18px]"></i>
-                    <span class="mt-2">Artikel</span>
+                <!-- Informasi -->
+                <a href="infromasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
+                    <i class="fas fa-clipboard-list text-[18px]"></i>
+                    <span class="mt-2">Informasi</span>
                 </a>
 
-                <!-- Fasilitas -->
-                <a href="" aria-label="Fasilitas" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
-                    <i class="fas fa-school text-[18px]"></i>
-                    <span class="mt-2">Fasilitas</span>
+                <!-- Program -->
+                <a href="" aria-label="Program" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
+                    <i class="fas fa-book-open text-[18px]"></i>
+                    <span class="mt-2">Program</span>
                 </a>
 
                 <!-- Tentang -->
-                <a href="profil.html" aria-label="Tentang" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
-                    <i class="fas fa-info-circle text-[18px]"></i>
+                <a href="profil.html" aria-label="Profil" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
+                    <i class="fas fa-school text-[18px]"></i>
                     <span class="mt-2">Profil</span>
                 </a>
                 </nav>
