update: color-footer-header, add: statistik

--- a/testimoni.html
+++ b/testimoni.html
@@ -18,50 +18,46 @@
   <body class="bg-[#f7f7f7] m-0 p-0">
 
   <main class="max-w-2xl mx-auto mt-4 px-4 sm:px-6 md:px-8">
-
       <!-- Poster Kontainer -->
       <div class="w-full max-w-6xl bg-gradient-to-r from-blue-600 to-blue-700 text-white p-8 md:p-12 rounded-2xl shadow-2xl">
           <h1 class="text-3xl md:text-2xl font-bold text-center mb-10">
               Sekolah Ibnul Qayyim Islamic School
           </h1>
 
-          <!-- Statistik Grid -->
-          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+          <!-- Statistik Grid: 2 atas & 2 bawah FIX -->
+          <div class="grid grid-cols-2 gap-4">
 
               <!-- Item 1 -->
-              <div class="bg-white/10 backdrop-blur-sm p-6 rounded-xl text-center flex flex-col justify-center items-center min-h-[170px]">
-                  <i class="fas fa-user-graduate text-[32px] mb-3"></i>
-                  <p class="text-2xl font-extrabold">1500+</p>
-                  <p class="text-sm mt-2 font-medium">Siswa Aktif</p>
+              <div class="bg-white/10 backdrop-blur-sm p-4 rounded-xl text-center flex flex-col justify-center items-center min-h-[140px]">
+                  <i class="fas fa-user-graduate text-[28px] mb-2"></i>
+                  <p class="text-xl font-extrabold">1500+</p>
+                  <p class="text-xs mt-1 font-medium">Siswa Aktif</p>
               </div>
 
               <!-- Item 2 -->
-              <div class="bg-white/10 backdrop-blur-sm p-6 rounded-xl text-center flex flex-col justify-center items-center min-h-[170px]">
-                  <i class="fas fa-user-tie text-[32px] mb-3"></i>
-                  <p class="text-2xl font-extrabold">76+</p>
-                  <p class="text-sm mt-2 font-medium">Tenaga Pendidik</p>
+              <div class="bg-white/10 backdrop-blur-sm p-4 rounded-xl text-center flex flex-col justify-center items-center min-h-[140px]">
+                  <i class="fas fa-user-tie text-[28px] mb-2"></i>
+                  <p class="text-xl font-extrabold">76+</p>
+                  <p class="text-xs mt-1 font-medium">Tenaga Pendidik</p>
               </div>
 
               <!-- Item 3 -->
-              <div class="bg-white/10 backdrop-blur-sm p-6 rounded-xl text-center flex flex-col justify-center items-center min-h-[170px]">
-                  <i class="fas fa-chalkboard text-[32px] mb-3"></i>
-                  <p class="text-2xl font-extrabold">42</p>
-                  <p class="text-sm mt-2 font-medium">Ruang Kelas</p>
+              <div class="bg-white/10 backdrop-blur-sm p-4 rounded-xl text-center flex flex-col justify-center items-center min-h-[140px]">
+                  <i class="fas fa-chalkboard text-[28px] mb-2"></i>
+                  <p class="text-xl font-extrabold">42</p>
+                  <p class="text-xs mt-1 font-medium">Ruang Kelas</p>
               </div>
 
               <!-- Item 4 -->
-              <div class="bg-white/10 backdrop-blur-sm p-6 rounded-xl text-center flex flex-col justify-center items-center min-h-[170px]">
-                  <i class="fas fa-calendar-alt text-[32px] mb-3"></i>
-                  <p class="text-2xl font-extrabold">2011</p>
-                  <p class="text-sm mt-2 font-medium">Tahun Berdiri</p>
+              <div class="bg-white/10 backdrop-blur-sm p-4 rounded-xl text-center flex flex-col justify-center items-center min-h-[140px]">
+                  <i class="fas fa-calendar-alt text-[28px] mb-2"></i>
+                  <p class="text-xl font-extrabold">2011</p>
+                  <p class="text-xs mt-1 font-medium">Tahun Berdiri</p>
               </div>
 
           </div>
       </div>
 
-  </main>
-  <br>
-
-  </body>
-
+  </main><br>
+</body>
 </html>
