--- a/infromasi.html
+++ b/infromasi.html
@@ -29,7 +29,7 @@
     <body class="bg-[#f7f7f7] m-0 p-0">
 
         <!-- Navbar -->
-            <header class="fixed top-0 w-full z-50 bg-[#ffdd00] pt-2 pb-2">
+            <header class="fixed top-0 w-full z-50 bg-gradient-to-r from-green-600 to-green-800 pt-2 pb-2">
             <div class="max-w-2xl mx-auto flex items-center justify-between px-4 sm:px-6 md:px-8 h-14">
                 <form action="/artikel/cari" method="GET" class="flex items-center w-full gap-2">
                 <input
@@ -156,7 +156,7 @@
 
 
         <!-- Footer -->
-            <footer class="bg-[#71c55d] rounded-[32px] px-8 sm:px-6 py-8 text-white max-w-2xl mx-auto mt-8">
+            <footer class="bg-gradient-to-r from-green-600 to-green-800 rounded-[32px] px-8 sm:px-6 py-8 text-white max-w-2xl mx-auto mt-8">
             <div class="flex flex-col sm:flex-row justify-between gap-10">
                 
                 <!-- Lokasi -->
@@ -203,25 +203,25 @@
                 <nav aria-label="Primary" class="max-w-2xl mx-auto flex items-center justify-between px-4 sm:px-6 md:px-8 h-14 text-gray-400 text-[12px] font-light">
                 
                 <!-- Beranda -->
-                <a href="index.html" aria-label="Beranda" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
+                <a href="index.html" aria-label="Beranda" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
                     <i class="fas fa-home text-[18px]"></i>
                     <span class="mt-2">Beranda</span>
                 </a>
 
                 <!-- Informasi -->
-                <a href="infromasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
+                <a href="infromasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
                     <i class="fas fa-clipboard-list text-[18px]"></i>
                     <span class="mt-2">Informasi</span>
                 </a>
 
                 <!-- Program -->
-                <a href="" aria-label="Program" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
+                <a href="" aria-label="Program" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
                     <i class="fas fa-book-open text-[18px]"></i>
                     <span class="mt-2">Program</span>
                 </a>
 
                 <!-- Tentang -->
-                <a href="profil.html" aria-label="Profil" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
+                <a href="profil.html" aria-label="Profil" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
                     <i class="fas fa-school text-[18px]"></i>
                     <span class="mt-2">Profil</span>
                 </a>
