add: akreditasi dan prestasi, update: testimoni

--- a/infromasi.html
+++ b/infromasi.html
@@ -157,45 +157,43 @@
 
         <!-- Footer -->
             <footer class="bg-gradient-to-r from-green-600 to-green-800 rounded-[32px] px-8 sm:px-6 py-8 text-white max-w-2xl mx-auto mt-8">
-            <div class="flex flex-col sm:flex-row justify-between gap-10">
-                
-                <!-- Lokasi -->
-                <div class="sm:w-1/2 pr-4 pl-6">
-                <img alt="yayasan" class="mb-4 h-12" src="img/yayasaniqis.png" width="120" />
-                <div>
-                    <h4 class="font-bold text-[15px] mb-2 leading-snug">Ibnul Qayyim Islamic School</h4>
-                    <p class="text-[13px] leading-relaxed">
-                    <a href="https://maps.app.goo.gl/fHwqpS6tJmeQEMHx6">
-                        Jl. Taman Bunga Sudiang No.2, Laikang, Biringkanaya, Makassar, Sulawesi Selatan 90242
-                    </a>
-                    </p>
-                </div>
-                </div>
+                <div class="flex flex-col sm:flex-row justify-between gap-10">
+                    
+                    <!-- Lokasi -->
+                    <div class="sm:w-1/2 pr-4 pl-6">
+                    <img alt="yayasan" class="mb-4 h-12" src="img/yayasaniqis.png" width="120" />
+                    <div>
+                        <h4 class="font-bold text-[15px] mb-2 leading-snug">Ibnul Qayyim Islamic School</h4>
+                        <p class="text-[13px] leading-relaxed">
+                            <a href="https://maps.app.goo.gl/fHwqpS6tJmeQEMHx6">Jl. Taman Bunga Sudiang No.2, Laikang, Biringkanaya, Makassar, Sulawesi Selatan 90242</a>
+                        </p>
+                    </div>
+                    </div>
 
-                <!-- Kontak -->
-                <div class="sm:w-1/2 pl-4">
-                <h3 class="font-semibold text-white mb-4 text-[15px]">Hubungi Kami</h3>
-                <ul class="text-[13px] space-y-3 leading-relaxed">
-                    <li class="flex items-center gap-2">
-                    <i class="fab fa-whatsapp text-white text-lg"></i>
-                    <a href="https://wa.me/6281341311314" target="_blank" class="hover:underline">+62 813 4131 1314</a>
-                    </li>
-                    <li class="flex items-center gap-2">
-                    <i class="fab fa-instagram text-white text-lg"></i>
-                    <a href="https://www.instagram.com/iqismakassar" target="_blank" class="hover:underline">iqismakassar</a>
-                    </li>
-                    <li class="flex items-center gap-2">
-                    <i class="fab fa-facebook-f text-white text-lg"></i>
-                    <a href="https://web.facebook.com/ibnulqayyim.sch.id/" target="_blank" class="hover:underline">Ibnul Qayyim Islamic School</a>
-                    </li>
-                    <li class="flex items-center gap-2">
-                    <i class="fab fa-youtube text-white text-lg"></i>
-                    <a href="https://www.youtube.com/@IQISTV" target="_blank" class="hover:underline">IQISTV</a>
-                    </li>
-                </ul>
-                </div>
+                    <!-- Kontak -->
+                    <div class="sm:w-1/2 pl-4">
+                    <h3 class="font-semibold text-white mb-4 text-[15px]">Hubungi Kami</h3>
+                    <ul class="text-[13px] space-y-3 leading-relaxed">
+                        <li class="flex items-center gap-2">
+                        <i class="fab fa-whatsapp text-white text-lg"></i>
+                        <a href="https://wa.me/6281341311314" target="_blank" class="hover:underline">+62 813 4131 1314</a>
+                        </li>
+                        <li class="flex items-center gap-2">
+                        <i class="fab fa-instagram text-white text-lg"></i>
+                        <a href="https://www.instagram.com/iqismakassar" target="_blank" class="hover:underline">iqismakassar</a>
+                        </li>
+                        <li class="flex items-center gap-2">
+                        <i class="fab fa-facebook-f text-white text-lg"></i>
+                        <a href="https://web.facebook.com/ibnulqayyim.sch.id/" target="_blank" class="hover:underline">Ibnul Qayyim Islamic School</a>
+                        </li>
+                        <li class="flex items-center gap-2">
+                        <i class="fab fa-youtube text-white text-lg"></i>
+                        <a href="https://www.youtube.com/@IQISTV" target="_blank" class="hover:underline">IQISTV</a>
+                        </li>
+                    </ul>
+                    </div>
 
-            </div><br><br><br>
+                </div><br><br><br>
             </footer>
 
         <!-- NavBar -->
