--- a/program.html
+++ b/program.html
@@ -35,7 +35,7 @@
 
 
         <!-- Footer -->
-            <footer class="bg-[#71c55d] rounded-[32px] px-8 sm:px-6 py-8 text-white max-w-2xl mx-auto mt-8">
+            <footer class="bg-gradient-to-r from-green-600 to-green-800 rounded-[32px] px-8 sm:px-6 py-8 text-white max-w-2xl mx-auto mt-8">
             <div class="flex flex-col sm:flex-row justify-between gap-10">
                 
                 <!-- Lokasi -->
@@ -82,26 +82,26 @@
                 <nav aria-label="Primary" class="max-w-2xl mx-auto flex items-center justify-between px-4 sm:px-6 md:px-8 h-14 text-gray-400 text-[12px] font-light">
                 
                 <!-- Beranda -->
-                <a href="index.html" aria-label="Beranda" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
+                <a href="index.html" aria-label="Beranda" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
                     <i class="fas fa-home text-[18px]"></i>
                     <span class="mt-2">Beranda</span>
                 </a>
 
                 <!-- Informasi -->
-                <a href="infromasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
-                    <i class="fas fa-book-open text-[18px]"></i>
-                    <span class="mt-2">Informasi</span>
+                <a href="infromasi.html" aria-label="Informasi" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
+                    <i class="fas fa-clipboard-list text-[18px]"></i>
+                    <span class="mt-2">Artikel</span>
                 </a>
 
                 <!-- Program -->
-                <a href="" aria-label="Program" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
-                    <i class="fas fa-school text-[18px]"></i>
+                <a href="program.html" aria-label="Program" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
+                    <i class="fas fa-book-open text-[18px]"></i>
                     <span class="mt-2">Program</span>
                 </a>
 
                 <!-- Tentang -->
-                <a href="profil.html" aria-label="Profil" class="flex flex-col items-center justify-center flex-1 hover:text-[#71c55d]">
-                    <i class="fas fa-info-circle text-[18px]"></i>
+                <a href="profil.html" aria-label="Profil" class="flex flex-col items-center justify-center flex-1 hover:text-[green]">
+                    <i class="fas fa-school text-[18px]"></i>
                     <span class="mt-2">Profil</span>
                 </a>
                 </nav>
