--- a/profil.html
+++ b/profil.html
@@ -18,7 +18,7 @@
         }
         </style>
     </head>
-<body class="bg-[#f7f7f7] m-0 p-0">
+<body class="bg-[#F2F2F2] m-0 p-0">
 
     <main class="max-w-2xl mx-auto mt-4 px-4 sm:px-6 md:px-8 pt-4">
 
