--- a/jenjang.html
+++ b/jenjang.html
@@ -1,155 +1,99 @@
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>IQIS Makassar | Beranda</title>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Header dengan Pencarian</title>
+    <!-- Menggunakan Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <!-- <link rel="stylesheet" href="style.css"> --> <!-- Style.css Anda mungkin tidak lagi diperlukan jika semua style ada di sini -->
-    <style>
-      body {
-        font-family: "Inter", sans-serif;
-      }
-    </style>
-  </head>
+</head>
+<body class="bg-gray-100">
 
-  <body class="bg-[#f7f7f7] m-0 p-0">
+    <!-- ==================== HEADER START ==================== -->
+    <header class="bg-white shadow-md sticky top-0 z-50">
+        <div class="container mx-auto px-4 py-4">
+            <div class="flex items-center justify-between">
+                <!-- Logo/Brand -->
+                <a href="#" class="flex items-center">
+                    <!-- Ganti dengan logo Anda -->
+                    <img src="https://placehold.co/40x40/3B82F6/FFFFFF?text=Logo" alt="Logo" class="h-10 w-10 mr-3 rounded-lg">
+                    <span class="text-xl font-bold text-gray-800">NamaBrand</span>
+                </a>
 
-  <main class="max-w-2xl mx-auto mt-4 px-4 sm:px-6 md:px-8">
-    <!-- Hero Section: Sambutan Selamat Datang -->
-<section class="text-center py-12 px-4 bg-gradient-to-r from-blue-500 to-indigo-600 rounded-lg shadow-lg text-white">
-  <h1 class="text-4xl font-bold mb-4">Selamat Datang di IQIS Makassar</h1>
-  <p class="text-lg max-w-2xl mx-auto">
-    Membentuk generasi yang cerdas, berkarakter, dan siap menghadapi tantangan global dengan pendidikan berbasis nilai dan inovasi.
-  </p>
-</section>
+                <!-- Menu Navigasi (Desktop) -->
+                <nav class="hidden md:flex space-x-6">
+                    <a href="#" class="text-gray-600 hover:text-blue-500 transition-colors duration-200">Beranda</a>
+                    <a href="#" class="text-gray-600 hover:text-blue-500 transition-colors duration-200">Tentang</a>
+                    <a href="#" class="text-gray-600 hover:text-blue-500 transition-colors duration-200">Layanan</a>
+                    <a href="#" class="text-gray-600 hover:text-blue-500 transition-colors duration-200">Kontak</a>
+                </nav>
 
-<!-- Section 1: Sejarah Sekolah -->
-<section id="sejarah" class="py-12">
-  <div class="bg-white p-8 rounded-lg shadow-md">
-    <h2 class="text-3xl font-semibold mb-4 text-gray-800 border-b-2 border-indigo-500 pb-2">
-      <i class="fas fa-history mr-2 text-indigo-500"></i>Sejarah Sekolah
-    </h2>
-    <p class="text-gray-700 text-justify leading-relaxed">
-      IQIS Makassar didirikan pada tahun 2005 dengan tekad kuat untuk menciptakan lembaga pendidikan yang tidak hanya unggul dalam akademis, tetapi juga membentuk karakter peserta didik yang kokoh. Berawal dari sebuah komitmen para pendiri pendidikan, sekolah ini tumbuh pesat dari hanya memiliki beberapa kelas menjadi institusi yang diakui dan dihormati di Makassar dan sekitarnya. Sepanjang perjalanannya, IQIS Makassar terus berinovasi dalam metode pengajaran, mengintegrasikan teknologi, dan memperkuat nilai-nilai keislaman untuk memastikan setiap lulusannya menjadi pemimpin yang bertanggung jawab dan berintegritas.
-    </p>
-  </div>
-</section>
+                <!-- Kolom Pencarian & Menu Mobile -->
+                <div class="flex items-center space-x-3">
+                    <!-- Form Pencarian -->
+                    <form class="hidden sm:flex items-center">
+                        <input 
+                            type="text" 
+                            placeholder="Cari produk..." 
+                            class="px-4 py-2 w-64 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent text-sm"
+                        >
+                        <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-r-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-colors duration-200">
+                            <!-- Icon Search (SVG) -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                            </svg>
+                        </button>
+                    </form>
 
-<!-- Section 2: Visi dan Misi -->
-<section id="visi-misi" class="py-12">
-  <div class="bg-white p-8 rounded-lg shadow-md">
-    <h2 class="text-3xl font-semibold mb-6 text-gray-800 border-b-2 border-indigo-500 pb-2">
-      <i class="fas fa-eye mr-2 text-indigo-500"></i>Visi & Misi
-    </h2>
-    <div class="grid md:grid-cols-2 gap-8">
-      <div>
-        <h3 class="text-2xl font-semibold mb-3 text-indigo-600">Visi</h3>
-        <p class="text-gray-700">
-          Terwujudnya lembaga pendidikan Islam yang berkualitas dan berbasis pada pemahaman Ahlussunah wal Jama'ah dengan penguasaan hafalan Al-Quran, ilmu syar’iyah dan didukung dengan penguasaan bahasa Arab Dan English.
-        </p>
-      </div>
-      <div>
-        <h3 class="text-2xl font-semibold mb-3 text-indigo-600">Misi</h3>
-        <ul class="text-gray-700 space-y-2">
-          <li><i class="fas fa-check-circle text-green-500 mr-2"></i>Menyelenggarakan proses pembelajaran yang berkualitas, inovatif, dan berbasis teknologi.</li>
-          <li><i class="fas fa-check-circle text-green-500 mr-2"></i>Mengembangkan potensi siswa dalam bidang akademik, non-akademik, dan kepemimpinan.</li>
-          <li><i class="fas fa-check-circle text-green-500 mr-2"></i>Membangun karakter siswa yang berlandaskan iman dan taqwa.</li>
-          <li><i class="fas fa-check-circle text-green-500 mr-2"></i>Menciptakan lingkungan sekolah yang aman, nyaman, dan mendukung pertumbuhan siswa.</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
+                    <!-- Tombol Menu Hamburger (Mobile) -->
+                    <button id="mobile-menu-button" class="md:hidden focus:outline-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
 
-<!-- Section 3: Video Profil -->
-<section id="video-profil" class="py-12">
-  <div class="bg-white p-8 rounded-lg shadow-md">
-    <h2 class="text-3xl font-semibold mb-6 text-gray-800 border-b-2 border-indigo-500 pb-2">
-      <i class="fas fa-video mr-2 text-indigo-500"></i>Video Profil
-    </h2>
-    <p class="text-gray-700 mb-4">Saksikan kilas balik dan suasana belajar mengajar di IQIS Makassar.</p>
-    <!-- Embedded YouTube Video -->
-    <div class="relative" style="padding-top: 56.25%;">
-      <iframe 
-        class="absolute top-0 left-0 w-full h-full rounded-lg shadow-lg" 
-        src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-      </iframe>
-    </div>
-    <p class="text-sm text-gray-500 mt-2 text-center">*Ganti ID YouTube (dQw4w9WgXcQ) dengan ID video profil sekolah Anda.</p>
-  </div>
-</section>
-
-<!-- Section 4: Prestasi dan Akreditasi -->
-<section id="prestasi" class="py-12">
-  <div class="bg-white p-8 rounded-lg shadow-md">
-    <h2 class="text-3xl font-semibold mb-8 text-gray-800">
-      <i class="fas fa-award mr-4 text-indigo-500"></i>Akreditasi
-    </h2>
-    
-    <!-- Akreditasi -->
-    <div class="bg-green-50 border-l-4 border-green-500 p-4 mb-12 rounded">
-      <h3 class="text-xl font-semibold mb-2 text-green-800">
-        Akreditasi
-      </h3>
-      <p class="text-gray-700">
-        Kami bangga menyandang predikat <strong>Akreditasi "A"</strong> dari Badan Akreditasi Nasional Sekolah/Madrasah (BAN-SM). Ini adalah bukti komitmen kami dalam memberikan standar pendidikan tertinggi.
-      </p>
-    </div>
-
-    <!-- Prestasi -->
-    <div>
-      <h2 class="text-3xl font-semibold mb-8 text-gray-800">
-        <i class="fas fa-medal mr-2 text-yellow-500"></i>Prestasi Unggulan
-      </h2>
-      <div class="grid md:grid-cols-2 gap-4">
-        <div class="flex items-start space-x-3">
-          <i class="fas fa-star text-yellow-400 mt-1"></i>
-          <div>
-            <h4 class="font-semibold">Juara 1 Olimpiade Sains Nasional (OSN) Matematika Tingkat Provinsi</h4>
-            <p class="text-sm text-gray-600">Tahun 2023</p>
-          </div>
+            <!-- Menu Navigasi Mobile (Tersembunyi) -->
+            <nav id="mobile-menu" class="hidden md:hidden mt-4 pb-4">
+                <a href="#" class="block py-2 text-gray-600 hover:text-blue-500">Beranda</a>
+                <a href="#" class="block py-2 text-gray-600 hover:text-blue-500">Tentang</a>
+                <a href="#" class="block py-2 text-gray-600 hover:text-blue-500">Layanan</a>
+                <a href="#" class="block py-2 text-gray-600 hover:text-blue-500">Kontak</a>
+                
+                <!-- Pencarian di Mobile -->
+                <form class="mt-4 flex items-center">
+                    <input 
+                        type="text" 
+                        placeholder="Cari produk..." 
+                        class="px-4 py-2 w-full border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent text-sm"
+                    >
+                    <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-r-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                        </svg>
+                    </button>
+                </form>
+            </nav>
         </div>
-        <div class="flex items-start space-x-3">
-          <i class="fas fa-star text-yellow-400 mt-1"></i>
-          <div>
-            <h4 class="font-semibold">Peringkat 3 Terbaik dalam Lomba Debat Bahasa Inggris Se-Sulawesi Selatan</h4>
-            <p class="text-sm text-gray-600">Tahun 2022</p>
-          </div>
-        </div>
-        <div class="flex items-start space-x-3">
-          <i class="fas fa-star text-yellow-400 mt-1"></i>
-          <div>
-            <h4 class="font-semibold">Medali Emas Kejuaraan Pencak Silat Antar Pelajar</h4>
-            <p class="text-sm text-gray-600">Tahun 2023</p>
-          </div>
-        </div>
-        <div class="flex items-start space-x-3">
-          <i class="fas fa-star text-yellow-400 mt-1"></i>
-          <div>
-            <h4 class="font-semibold">Sekolah Adiwiyata Nasional</h4>
-            <p class="text-sm text-gray-600">Penghargaan atas kepedulian lingkungan</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </header>
+    <!-- ==================== HEADER END ==================== -->
 
-<!-- Call to Action Section -->
-<section class="text-center py-12 px-4 bg-gradient-to-r from-indigo-600 to-blue-500 rounded-lg shadow-lg text-white">
-  <h2 class="text-3xl font-bold mb-4">Tertarik Bergabung dengan Kami?</h2>
-  <p class="text-lg mb-6">Jadilah bagian dari generasi penerus yang hebat di IQIS Makassar.</p>
-  <button class="bg-white text-indigo-600 font-bold py-3 px-8 rounded-full hover:bg-gray-100 transition duration-300 transform hover:scale-105">
-    <i class="fas fa-phone-alt mr-2"></i>Informasi Pendaftaran
-  </button>
-</section>
-  </main><br>
+    <!-- Konten Halaman (Contoh) -->
+    <main class="container mx-auto px-4 py-8">
+        <h1 class="text-3xl font-bold text-gray-800 mb-4">Selamat Datang di Halaman Kami</h1>
+        <p class="text-gray-600">Gulir ke bawah atau perkecil ukuran browser untuk melihat efek sticky pada header dan responsivitasnya.</p>
+    </main>
+
+    <!-- JavaScript untuk Menu Mobile -->
+    <script>
+        const mobileMenuButton = document.getElementById('mobile-menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        mobileMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
+
 </body>
 </html>
