update: change about me

--- a/profil.html
+++ b/profil.html
@@ -4,31 +4,25 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>IQIS Makassar | Profil</title>
         <script src="https://cdn.tailwindcss.com"></script>
-        <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-            rel="stylesheet"
-        />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap"
-            rel="stylesheet"
-            />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
         <style>
-        body {
-            font-family: "Inter", sans-serif;
-        }
+            body {
+                font-family: "Inter", sans-serif;
+            }
         </style>
     </head>
-<body class="bg-[#F2F2F2] m-0 p-0">
-
-    <main class="max-w-2xl mx-auto mt-4 px-4 sm:px-6 md:px-8 pt-4">
+    <body class="bg-[#F2F2F2] m-0 p-0">
+        <main class="max-w-2xl mx-auto mt-4 px-4 sm:px-6 md:px-8 pt-4">
 
         <!-- Pengenalan Sekolah -->
         <section>
-            <h2 class="text-4xl font-bold mb-8 text-center">Tentang Kami</h2>
-            <p class="text-gray-700 leading-relaxed">
+            <h2 class="text-2xl font-bold mb-4 text-center">Tentang Kami</h2>
+            <p class="text-gray-700 leading-relaxed text-justify">
                 Ibnul Qayyim Islamic School – IQIS adalah Sekolah Islam yang diselenggarakan dengan memadukan secara Integratif nilai dan ajaran Islam dalam bangunan kurikulum dengan pendekatan pembelajaran yang efektif dan pelibatan yang optimal dan koperatif antara guru dan orangtua, serta masyarakat untuk membina karakter dan kompetensi peserta didik. Berbekal niat yang ikhlas untuk memperbaiki generasi muda kaum muslimin di masa yang akan datang. Maka didirikanlah Ibnul Qayyim Islamic School pada tahun 2011 (SDIT) dengan mengusung konsep sekolah yang memiliki keunggulan pada ilmu keislaman ditambah tahfidzul qur’an dan bahasa asing (Arab & inggris) dengan tetap mengacu pada kurikulum yang di tetapkan pemerintah.
             </p>
         </section>
+
 
         <!-- Video YouTube -->
         <section>
