update: fix carousel

--- a/infromasi.html
+++ b/infromasi.html
@@ -4,6 +4,8 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title>IQIS Makassar | Artikel</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script src="js/script.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -19,7 +21,10 @@
         <!-- Navbar -->
             <header class="fixed top-0 w-full z-50 bg-gradient-to-r from-green-600 to-green-800 pt-2 pb-2">
                 <div class="max-w-2xl mx-auto flex items-center justify-between px-4 sm:px-6 md:px-8 h-14">
-                    <form action="/artikel/cari" method="GET" class="flex items-center w-full gap-2">
+                    <div class="flex items-center space-x-2">
+                        <img alt="yayasan" class="h-12" src="img/yayasaniqis.png" />
+                    </div>
+                    <!-- <form action="/artikel/cari" method="GET" class="flex items-center w-full gap-2">
                     <input
                         type="text"
                         name="q"
@@ -33,7 +38,7 @@
                     >
                         <i class="fas fa-search text-sm"></i>
                     </button>
-                    </form>
+                    </form> -->
                 </div>
             </header>
 
@@ -45,7 +50,7 @@
 
                     <section class="pt-4">
                         <!-- Swiper Container -->
-                        <div class="swiper announcementSwiper">
+                        <div class="swiper carousel-swiper">
                             <div class="swiper-wrapper">
                             
                             <!-- Card 1 -->
@@ -63,7 +68,7 @@
                             <!-- Card 2 -->
                             <div class="swiper-slide">
                                 <div class="bg-white rounded-lg overflow-hidden flex flex-col">
-                                    <img src="img/iqis.jpeg" alt="Kegiatan Sekolah" class="w-full h-48 object-cover">
+                                    <img src="img/iqis3.jpg" alt="Kegiatan Sekolah" class="w-full h-48 object-cover">
                                     <div class="p-6 flex-grow">
                                         <span class="text-xs text-yellow-600 font-semibold">KEGIATAN</span>
                                         <h3 class="text-md font-bold mt-2 mb-3 text-gray-800">Perayaan Hari Kemerdekaan RI</h3>
@@ -126,7 +131,7 @@
                                     <div class="p-4 flex flex-col justify-center flex-grow">
                                         <h3 class="font-semibold text-gray-900 text-base leading-tight">Misi Sekolah Kami</h3>
                                         <p class="text-[12px] text-gray-400 mt-1">Ibnul Qayyim Islamic School</p>
-                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-3">
+                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-2">
                                         Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
                                         </p>
                                     </div>
@@ -144,7 +149,7 @@
                                     <div class="p-4 flex flex-col justify-center flex-grow">
                                         <h3 class="font-semibold text-gray-900 text-base leading-tight">Misi Sekolah Kami</h3>
                                         <p class="text-[12px] text-gray-400 mt-1">Ibnul Qayyim Islamic School</p>
-                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-3">
+                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-2">
                                         Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
                                         </p>
                                     </div>
@@ -162,7 +167,7 @@
                                     <div class="p-4 flex flex-col justify-center flex-grow">
                                         <h3 class="font-semibold text-gray-900 text-base leading-tight">Misi Sekolah Kami</h3>
                                         <p class="text-[12px] text-gray-400 mt-1">Ibnul Qayyim Islamic School</p>
-                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-3">
+                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-2">
                                         Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
                                         </p>
                                     </div>
@@ -180,7 +185,7 @@
                                     <div class="p-4 flex flex-col justify-center flex-grow">
                                         <h3 class="font-semibold text-gray-900 text-base leading-tight">Misi Sekolah Kami</h3>
                                         <p class="text-[12px] text-gray-400 mt-1">Ibnul Qayyim Islamic School</p>
-                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-3">
+                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-2">
                                         Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
                                         </p>
                                     </div>
@@ -198,7 +203,7 @@
                                     <div class="p-4 flex flex-col justify-center flex-grow">
                                         <h3 class="font-semibold text-gray-900 text-base leading-tight">Misi Sekolah Kami</h3>
                                         <p class="text-[12px] text-gray-400 mt-1">Ibnul Qayyim Islamic School</p>
-                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-3">
+                                        <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-2">
                                         Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital...
                                         </p>
                                     </div>
@@ -279,24 +284,5 @@
                 </nav>
             </div>
             <!-- Penutup NavBar -->
-
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <!-- Initialize Swiper -->
-        <script>
-            const swiper = new Swiper('.announcementSwiper', {
-            slidesPerView: 1,
-            autoHeight: true,
-            spaceBetween: 20,
-            loop: true,
-            autoplay: {
-                delay: 3500,
-                disableOnInteraction: false,
-            },
-            pagination: {
-                el: '.swiper-pagination',
-                clickable: true,
-            }
-            });
-        </script>
     </body>
 </html>
