--- a/index.html
+++ b/index.html
@@ -46,78 +46,103 @@
     <main class="max-w-2xl mx-auto mt-4 px-4 sm:px-6 md:px-8">
 
     <!-- Jenjang Sekolah -->
-      <div class="mt-8 mb-8 overflow-x-auto slider-container overflow-x-scroll flex gap-4">
+      <div class="mt-8 mb-8 overflow-x-auto slider-container flex gap-4 hide-scrollbar">
         <div class="flex space-x-4 w-max px-2">
 
           <a href="https://linkbio.co/kbitibnulqayyim"
             target="_blank"
-            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow group"
-            style="background-image: url('img/iqis4.jpg'); background-size: cover; background-position: center;">
+            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow-lg group"
+            style="background-image: url('img/iqis2.jpg'); background-size: cover; background-position: center;">
             <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition duration-300"></div>
             <div class="relative z-10 flex flex-col items-center p-2">
-              <img src="img/kbit.png" class="w-10 mb-1" />
+              <!-- Logo Container dengan Blur dan Hover Effect -->
+              <div class="w-12 h-12 mb-1 rounded-full bg-white/20 backdrop-blur-sm p-2 flex items-center justify-center transition-all duration-300 group-hover:bg-white/40 group-hover:scale-110">
+                <img src="img/kbit.png" class="w-full h-full object-contain" />
+              </div>
               <span class="text-center leading-tight">KBIT</span>
             </div>
           </a>
 
           <a href="https://linktr.ee/tkitibnulqayyim"
             target="_blank"
-            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow group"
-            style="background-image: url('img/iqis.jpeg'); background-size: cover; background-position: center;">
+            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow-lg group"
+            style="background-image: url('img/iqis3.jpg'); background-size: cover; background-position: center;">
             <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition duration-300"></div>
             <div class="relative z-10 flex flex-col items-center p-2">
-              <img src="img/tkit.png" class="w-10 mb-1" />
+              <!-- Logo Container dengan Blur dan Hover Effect -->
+              <div class="w-12 h-12 mb-1 rounded-full bg-white/20 backdrop-blur-sm p-2 flex items-center justify-center transition-all duration-300 group-hover:bg-white/40 group-hover:scale-110">
+                <img src="img/tkit.png" class="w-full h-full object-contain" />
+              </div>
               <span class="text-center leading-tight">TKIT</span>
             </div>
           </a>
 
           <a href="https://linktr.ee/sditibnulqayyim"
             target="_blank"
-            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow group"
-            style="background-image: url('img/iqis3.jpg'); background-size: cover; background-position: center;">
+            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow-lg group"
+            style="background-image: url('img/iqis4.jpg'); background-size: cover; background-position: center;">
             <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition duration-300"></div>
             <div class="relative z-10 flex flex-col items-center p-2">
-              <img src="img/sdit.png" class="w-10 mb-1" />
+              <!-- Logo Container dengan Blur dan Hover Effect -->
+              <div class="w-12 h-12 mb-1 rounded-full bg-white/20 backdrop-blur-sm p-2 flex items-center justify-center transition-all duration-300 group-hover:bg-white/40 group-hover:scale-110">
+                <img src="img/sdit.png" class="w-full h-full object-contain" />
+              </div>
               <span class="text-center leading-tight">SDIT</span>
             </div>
           </a>
 
           <a href="https://linktr.ee/smpitibnulqayyim"
             target="_blank"
-            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow group"
-            style="background-image: url('img/iqis2.jpg'); background-size: cover; background-position: center;">
+            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow-lg group"
+            style="background-image: url('img/iqis5.jpg'); background-size: cover; background-position: center;">
             <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition duration-300"></div>
             <div class="relative z-10 flex flex-col items-center p-2">
-              <img src="img/smpit.png" class="w-10 mb-1" />
+              <!-- Logo Container dengan Blur dan Hover Effect -->
+              <div class="w-12 h-12 mb-1 rounded-full bg-white/20 backdrop-blur-sm p-2 flex items-center justify-center transition-all duration-300 group-hover:bg-white/40 group-hover:scale-110">
+                <img src="img/smpit.png" class="w-full h-full object-contain" />
+              </div>
               <span class="text-center leading-tight">SMPIT</span>
             </div>
           </a>
 
           <a href="https://linktr.ee/smkitibnulqayyim"
             target="_blank"
-            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow group"
+            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow-lg group"
             style="background-image: url('img/iqis6.jpg'); background-size: cover; background-position: center;">
             <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition duration-300"></div> 
             <div class="relative z-10 flex flex-col items-center p-2">
-              <img src="img/smkit.png" class="w-10 mb-1" />
+              <!-- Logo Container dengan Blur dan Hover Effect -->
+              <div class="w-12 h-12 mb-1 rounded-full bg-white/20 backdrop-blur-sm p-2 flex items-center justify-center transition-all duration-300 group-hover:bg-white/40 group-hover:scale-110">
+                <img src="img/smkit.png" class="w-full h-full object-contain" />
+              </div>
               <span class="text-center leading-tight">SMKIT</span>
             </div>
           </a>
 
           <a href="https://reliqo.iqis.sch.id/"
             target="_blank"
-            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-black overflow-hidden shadow group bg-gray-50">
+            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow-lg group"
+            style="background-image: url('img/iqis.jpeg'); background-size: cover; background-position: center;">
+            <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition duration-300"></div> 
             <div class="relative z-10 flex flex-col items-center p-2">
-              <img src="img/reliqo.png" class="w-10 mb-1" />
+              <!-- Logo Container dengan Blur dan Hover Effect -->
+              <div class="w-12 h-12 mb-1 rounded-full bg-white/20 backdrop-blur-sm p-2 flex items-center justify-center transition-all duration-300 group-hover:bg-white/40 group-hover:scale-110">
+                <img src="img/reliqo.png" class="w-full h-full object-contain" />
+              </div>
               <span class="text-center leading-tight">RELIQO</span>
             </div>
           </a>
 
           <a href="#"
             target="_blank"
-            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-black overflow-hidden shadow group bg-gray-50">
+            class="relative flex-shrink-0 w-32 h-32 flex flex-col items-center justify-center rounded-xl text-xs font-semibold text-white overflow-hidden shadow-lg group"
+            style="background-image: url('img/iqis2.jpg'); background-size: cover; background-position: center;">
+            <div class="absolute inset-0 bg-black bg-opacity-40 group-hover:bg-opacity-20 transition duration-300"></div> 
             <div class="relative z-10 flex flex-col items-center p-2">
-              <img src="img/reliqo.png" class="w-10 mb-1" />
+              <!-- Logo Container dengan Blur dan Hover Effect -->
+              <div class="w-12 h-12 mb-1 rounded-full bg-white/20 backdrop-blur-sm p-2 flex items-center justify-center transition-all duration-300 group-hover:bg-white/40 group-hover:scale-110">
+                <img src="img/reliqo.png" class="w-full h-full object-contain" />
+              </div>
               <span class="text-center leading-tight">BUROQ</span>
             </div>
           </a>
@@ -125,7 +150,6 @@
         </div>
       </div>
 
-      <!-- Poster Kontainer -->
       <div class="w-full max-w-6xl bg-gradient-to-r from-green-600 to-green-800 text-white p-8 md:p-12 rounded-2xl shadow-2xl">
           <h1 class="text-2xl md:text-2xl font-bold text-center mb-10">
               Ibnul Qayyim Islamic School Makassar
@@ -225,8 +249,8 @@
       
 
     <-- Artikel -->
-      <section class="mt-16 flex flex-row items-center justify-between">
-        <h2 class="text-xl font-bold text-gray-900">Artikel Terbaru</h2>
+      <section class="mt-8 flex flex-row items-center justify-between">
+        <h2 class="text-lg font-bold text-gray-900">Artikel Terbaru</h2>
         <a class="text-sm text-gray-700 flex items-center space-x-1 hover:text-[green] hover:underline" href="artikel.html">
           <span>Lihat Semua</span>
         </a>
@@ -283,7 +307,7 @@
               </div>
 
               <div class="p-4 flex flex-col justify-center flex-grow">
-                <h3 class="font-semibold text-gray-900 text-base leading-tight">Upacara Bendera Merah Putih 17 Agustus 2025</h3>
+                <h3 class="font-semibold text-gray-900 text-base leading-tight">Upacara Bendera Merah Putih 17 Agustus 2025</h4>
                 <p class="text-[12px] text-gray-400 mt-1">Ibnul Qayyim Islamic School</p>
                 <p class="text-[12px] text-gray-600 mt-1 leading-snug line-clamp-2">
                   Sekolah kami ada karena kami percaya bahwa pendidikan masa kini harus mencerminkan kebutuhan era digital ...
@@ -296,7 +320,7 @@
 
         <!-- Testimoni -->
         <section class="mt-16">
-          <h2 class="text-center text-2xl font-bold mb-8">Tanggapan Mereka Tentang IQIS?</h2>
+          <h2 class="text-center text-xl font-bold mb-8">Tanggapan Mereka Tentang IQIS?</h2>
 
           <!-- Container Swiper -->
             <div class="swiper carousel-swiper">
@@ -313,7 +337,7 @@
                       </div>
                     </div>
 
-                    <div class="mt-4 p-4 rounded-lg text-gray-600 text-[16px]">
+                    <div class="mt-4 p-4 rounded-lg text-gray-600 text-[14px]">
                       Ini menjadi salah satu experience yang terbarukan kepada anak-anak kita yang ada di sulawesi selatan ini, karna tidak semua sekolah bisa menghadirkan jurusan RPL dengan memperhatikan hafalan Al-Qurannya.
                     </div>
                   </div>
@@ -330,7 +354,7 @@
                       </div>
                     </div>
 
-                    <div class="mt-4 p-4 rounded-lg text-gray-600 text-[16px]">
+                    <div class="mt-4 p-4 rounded-lg text-gray-600 text-[14px]">
                       Ini menjadi salah satu experience yang terbarukan kepada anak-anak kita yang ada di sulawesi selatan ini, karna tidak semua sekolah bisa menghadirkan jurusan RPL dengan memperhatikan hafalan Al-Qurannya.
                     </div>
                   </div>
